# drydock-backups

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  docker.yml  release.yml
drydock_backups/: __about__.py  plugin.py
drydock_backups/patches/: drydock-mongodb-init-job  drydock-mysql-init-job  k8s-jobs  kustomization-resources
drydock_backups/templates/drydock_backups/k8s/: buckets.yml
drydock_backups/templates/drydock_backups/task/minio/: init
drydock_backups/templates/drydock_backups/task/mongodb/: init
drydock_backups/templates/drydock_backups/task/mysql/: init
