[project]
name = "drydock-backups"
version = "21.0.0"
description = "Drydock backups plugin for Tutor"
readme = "README.md"
authors = [
    { name = "eduNEXT" }
]
license-files = [ "LICENSE" ]
keywords = ["tutor", "plugin", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

dependencies = [
    "tutor~=21.0"
]

[project.urls]
homepage = "https://github.com/edunext/drydock-backups"
code = "https://github.com/edunext/drydock-backups"
issue-tracker = "https://github.com/edunext/drydock-backups/issues"

[project.entry-points."tutor.plugin.v1"]
drydock-backups = "drydock_backups.plugin"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "scriv>=1.7.0",
    "ty>=0.0.1a29",
]

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = "Added, Changed, Fixed, Removed"
format = "md"
md_header_level = 2
new_fragment_template = "file: changelog.d/scriv/new_fragment.md.j2"
entry_title_template = "file: changelog.d/scriv/entry_title.md.j2"

[tool.uv.build-backend]
module-root = "."
module-name = "drydock_backups"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
